deployment/homelab.postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homelab-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homelab-postgres
  template:
    metadata:
      labels:
        app: homelab-postgres
    spec:
      containers:
        - name: homelab-postgres
          image: postgres:15
          resources:
            requests:
              memory: "500Mi"
              cpu: "250m"
            limits:
              memory: "1000Mi"
              cpu: "500m"
          ports:
            - containerPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: homelab-postgres
spec:
  selector:
    app: homelab-postgres
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30008
---
