deployment/homelab.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nagastra-service
spec:
  selector:
    app: nagastra-nginx
  ports:
    - protocol: TCP

      # port is the port of the service, for the nginx container it is 80 (service port)
      # Think of this like: hey port, I'm running nginx on this port, so other services can access it through this port
      port: 80

      # targetPort is where the service is actually listening (container port)
      targetPort: 80

      # nodePort is where the serivice is accessible from outside the cluster using the node ip (host machine)
      nodePort: 30007

  type: NodePort
