deployment/homelab.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: homelab-nginx-ingress
  namespace: ingress-nginx

spec:
  rules:
  - host: api-superchat.siddhant.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-superchat
            port:
              number: 80
